Add 350 new words

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <div id="feedback"></div>
       <div id="result"></div>
     </div>
+    <script src="data.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
